      translation files.
    - res/i18n/x2goclient_nb_no.ts: remove obsolete comments (leading to
      problems when regenerating translation files.)
    - res/i18n/x2goclient_nl.ts: remove obsolete comments (leading to problems
      when regenerating translation files.)
    - res/i18n/x2goclient_*.ts: regenerate translations.
  * x2goclient.spec:
    - Respect %{optflags} and pass QMAKE_STRIP=: to fix missing debug info
      issues.

  [ Oleksandr Shneyder ]
  * New upstream version (4.1.1.0):
    - Interaction with SSH server (for example for changing
      expired password). Fixes: #592.
    - Fixing setting widget style issue in InteractionDialog on
      Windows client.
    - SSH Interaction for SSH Broker and SSH Server.
    - SSH Iteraction for method keyboard-interactive.
    - Move PulseManager MsgBox functions to main window:
      GUI functions should be used only from main thread.
    - Check "norecord" option on the first start of PulseAudio.
    - Disable/Enable PulseAudio in config dialog.
      New command line options:
      --disable-pulse to disable start of PulseAudio
      --disable-pulse-record to disable audio input.
    - Check if PulseAudio running at session start and resuming
      when sound is enabled. Show warning if PulseAudio not running
      and disable the sound support for the session to avoid
      session freezes.
    - Add session config file option "sshproxysamekey". With this option
      client will use for proxy authentication same key as for X2Go server.
      This is important in first case for broker users, where key can be
      generated "on the fly". Maybe it makes sence to add this option in UI
      and command line later.

  [ Robert Parts ]
  * New upstream version (4.1.1.0):
    - res/i18n/x2goclient_et.ts: update Estonian translation file.
    - res/i18n/x2goclient_et.ts: update Estonian translation file.

  [ Martti Pitkänen ]
  * New upstream version (4.1.1.0):