@@ -233,6 +233,7 @@ x2goclient (4.1.1.0-0x2go1) UNRELEASED; urgency=medium
     - res/i18n/x2goclient_nl.ts: remove obsolete comments (leading to problems
       when regenerating translation files.)
     - res/i18n/x2goclient_*.ts: regenerate translations.
+    - res/i18n/x2goclient_fi.ts: various fixups for Finnish translation file.
   * x2goclient.spec:
     - Respect %{optflags} and pass QMAKE_STRIP=: to fix missing debug info
       issues.
